--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
+    <div class="header">
+      <h1 id="title">TIC TAC TOE</h1>
+    </div>
+    <div class="container">
+      <div id="main-content">
+        <p>example</p>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
