Add Grid Items For Tic-Tac-Toe

--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
     <div class="container">
       <div id="main-content">
         <p>example</p>
+        <div class="grid-container">
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-1">item-1</div>
+          </button>
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-2">item-2<div>
+          </button class="tic-tac-toe-grid">
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-3">item-3</div>
+          </button>
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-4">item-4</div>
+          </button>
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-5">item-5</div>
+          </button>
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-6">item-6</div>
+          </button>
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-7">item-7</div>
+          </button>
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-8">item-8</div>
+          </button>
+          <button class="tic-tac-toe-grid">
+            <div class="tic-tac-toe-grid grid-item-9">item-9</div>
+          </button>
+        </div>
       </div>
     </div>
 
