Add Modal For Side Selection

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       <div id="main-content">
         <p>example</p>
         <div class="grid-container">
+
           <button class="tic-tac-toe-grid">
             <div class="tic-tac-toe-grid grid-item-1">item-1</div>
           </button>
           <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-2">item-2<div>
+            <div class="tic-tac-toe-grid grid-item-2">item-2</div>
           </button class="tic-tac-toe-grid">
           <button class="tic-tac-toe-grid">
             <div class="tic-tac-toe-grid grid-item-3">item-3</div>
@@ -42,7 +43,13 @@
           <button class="tic-tac-toe-grid">
             <div class="tic-tac-toe-grid grid-item-9">item-9</div>
           </button>
+
         </div>
+      </div>
+      <div class="modal">
+        <p id="selection-text"> Choose which side you want to play </p>
+        <button class="selection-button" id="buttonX"> X </button>
+        <button class="selection-button" id="buttonO"> O </button>
       </div>
     </div>
 
