Add Modal for Win Condition

--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
         </div>
       </div>
       <div class="modal">
-        <p id="selection-text"> Choose which side you want to play </p>
+        <p id="selection-text"> Choose Which Side You Want To Play </p>
         <button class="selection-button" id="buttonX"> X </button>
         <button class="selection-button" id="buttonO"> O </button>
+      </div>
+      <div class="results modal hidden">
+        <p> You won!</p>
       </div>
     </div>
 
