Remove Button Tags From Grid Divs

--- a/index.html
+++ b/index.html
@@ -15,44 +15,24 @@
       <div id="main-content">
         <p>example</p>
         <div class="grid-container">
-
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-1">item-1</div>
-          </button>
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-2">item-2</div>
-          </button class="tic-tac-toe-grid">
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-3">item-3</div>
-          </button>
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-4">item-4</div>
-          </button>
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-5">item-5</div>
-          </button>
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-6">item-6</div>
-          </button>
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-7">item-7</div>
-          </button>
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-8">item-8</div>
-          </button>
-          <button class="tic-tac-toe-grid">
-            <div class="tic-tac-toe-grid grid-item-9">item-9</div>
-          </button>
-
+          <div class="grid" id="0"></div>
+          <div class="grid" id="1"></div>
+          <div class="grid" id="2"></div>
+          <div class="grid" id="3"></div>
+          <div class="grid" id="4"></div>
+          <div class="grid" id="5"></div>
+          <div class="grid" id="6"></div>
+          <div class="grid" id="7"></div>
+          <div class="grid" id="8"></div>
         </div>
       </div>
       <div class="modal">
-        <p id="selection-text"> Choose Which Side You Want To Play </p>
-        <button class="selection-button" id="buttonX"> X </button>
-        <button class="selection-button" id="buttonO"> O </button>
+        <p id="selection-text">Choose Which Side You Want To Play</p>
+        <button class="selection-button" id="buttonX">X</button>
+        <button class="selection-button" id="buttonO">O</button>
       </div>
       <div class="results modal hidden">
-        <p> You won!</p>
+        <p>You won!</p>
       </div>
     </div>
 
