Add 'result text' Class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="selection-button" id="buttonO">O</button>
       </div>
       <div class="results modal hidden">
-        <p>You won!</p>
+        <p id="result-text">You won!</p>
       </div>
     </div>
 
